use CGI obj for fastcgi
git-svn-id: file:///home/zag/svn/WebDAO@100 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension HTML::WebDAO.
+0.79
+    - use additional parametr for WebDAO::CVcgi under fastcgi
 0.78
     - customize fastcgi by SetEnv
 0.77
