add caching and fix load session attributes
git-svn-id: file:///home/zag/svn/WebDAO@101 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension HTML::WebDAO.
 0.79
+    - fix Session.pm (add strict)
+    - add caching and fix load session attributes
+    - use default ENV when fastcgi
     - use additional parametr for WebDAO::CVcgi under fastcgi
 0.78
     - customize fastcgi by SetEnv
