git-svn-id: file:///home/zag/svn/WebDAO@106 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension HTML::WebDAO.
+0.80
+    - ENV{wdFCGIreq} - count request per fcgi process
+    - fix mem leaks
+    - unicode
 0.79
     - fix Session.pm (add strict)
     - add caching and fix load session attributes
