add response  object; set default session
git-svn-id: file:///home/zag/svn/WebDAO@112 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension HTML::WebDAO.
+0.81
+    - create default controller ( Session )
+    - create Response class
+
 0.80
     - ENV{wdFCGIreq} - count request per fcgi process
     - fix mem leaks
