--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension HTML::WebDAO.
+0.83
+    - clean deprecated code
+    - add set_absolute_url (Session.pm)
 0.82
     - add error404 response method
     - call_path parse custom url (Session)
