add _get_object_by_path, add tests
git-svn-id: file:///home/zag/svn/WebDAO@202 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension HTML::WebDAO.
+
+    - add _get_object_by_path methods to Container, Element
 0.83
     - clean deprecated code
     - add set_absolute_url (Session.pm)
