add resolve_path method;html context to response class
git-svn-id: file:///home/zag/svn/WebDAO@209 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Perl extension HTML::WebDAO.
-
+    - add resolve_path method
+    - add html context to response class
     - add _get_object_by_path methods to Container, Element
 0.83
     - clean deprecated code
