--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension HTML::WebDAO.
+0.85
+    - add standalone FastCGI server
 0.84
     - adopt Lexer::Lmethod to use _get_object_by_path
     - handle __extra_path attribute
