add 302 status for redirecr (for ngnix)
git-svn-id: file:///home/zag/svn/WebDAO@253 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension HTML::WebDAO.
+0.86 
+   - add status 302 for redirect
 0.85
     - add standalone FastCGI server
 0.84
