clean registers; new ver
git-svn-id: file:///home/zag/svn/WebDAO@268 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension HTML::WebDAO.
+
+0.87
+   - clean ( register 'HTML::WebDAO::Comp::ListEnv') from scripts
 0.86 
    - add status 302 for redirect
 0.85
