fix empty accept;new ver
git-svn-id: file:///home/zag/svn/WebDAO@292 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension HTML::WebDAO.
 
+0.89
+   - fix empty accept hash in session object
 0.88
    -  workaround for CGI.pm: http://rt.cpan.org/Ticket/Display.html?id=36435
 0.87
