rename to WebDAO
git-svn-id: file:///home/zag/svn/WebDAO@423 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-Revision history for Perl extension HTML::WebDAO.
+Revision history for Perl extension WebDAO.
+
+1.00
+    - rename namespace to WebDAO
 
 0.91
    - fix str number in logs message (HTML::WebDAO::Base::_log)
