--- a/contrib/About.ru.pod
+++ b/contrib/About.ru.pod
@@ -1,6 +1,6 @@
-=head1 Name
+=head1 NAME
 
-B<WebDAO> - лекговесный фрэймворк, предназначенный для написания различных по сложности приложений.
+B<WebDAO> - лекговесный фрэймворк, предназначенный для создания различных по сложности web приложений.
 
 =head2 Основные принципы 
 
