--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension WebDAO.
 
 1.00
+    - add debug levels; wdEngine Env var;
+    - fix: generate session id in constructor( SessionSH)
     - rename namespace to WebDAO
 
 0.91
