--- a/README
+++ b/README
@@ -39,7 +39,7 @@ zagap@users.sourceforge.net
 COPYRIGHT AND LICENCE
 
 
-Copyright (C) 2003 Zahatski Aliaksandr
+Copyright (C) 2003-2009 Zahatski Aliaksandr
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
