--- a/contrib/Install.pod
+++ b/contrib/Install.pod
@@ -2,109 +2,7 @@
 
 Install B<Webdao>.
 
-=begin table
+Documentation on how to write bindings/addons forthcoming.. 
 
-Проверка таблицы
-center, left, right
-Первый стольбец, второй столбец, третий столбец
-1,2213|123123
-234,234,634
-2134,"1234,12",123
-
-=end table
-
-=head1 test
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-aasd
-asd
-
-L<"test">
 =cut
 
