add docs and expamples
git-svn-id: file:///home/zag/svn/WebDAO@485 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension WebDAO.
 
 1.00
+    - add examples
     - add debug levels; wdEngine Env var;
     - fix: generate session id in constructor( SessionSH)
     - rename namespace to WebDAO
