--- a/contrib/About.pod
+++ b/contrib/About.pod
@@ -28,7 +28,7 @@ There are many environments in which the web applications work:
     | FastCGI                       CGI         |
     |           ------------------------        |
     |     nginx |                      |        |
-    |           |     You code         | isapi  |
+    |           |     Your code        | isapi  |
     |           |                      |        |
     |            ----------------------         |
     |  Shell            Test::More      IIS     |
