clean code; new ver
git-svn-id: file:///home/zag/svn/WebDAO@500 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebDAO.
-
+1.02
+    - clean deprecated code
+1.01
+    - fix docs
 1.00
     - add examples
     - add debug levels; wdEngine Env var;
