chanege public methods to upcase; new ver
git-svn-id: file:///home/zag/svn/WebDAO@504 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension WebDAO.
 1.02
     - clean deprecated code
+    - add method access  control
 1.01
     - fix docs
 1.00
