use defined for methods in url
git-svn-id: file:///home/zag/svn/WebDAO@529 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension WebDAO.
+    
+    - use defined for methods in url
 1.02
     - fix memleaks
     - clean deprecated code
@@ -10,7 +12,6 @@ Revision history for Perl extension WebDAO.
     - add debug levels; wdEngine Env var;
     - fix: generate session id in constructor( SessionSH)
     - rename namespace to WebDAO
-
 0.91
    - fix str number in logs message (HTML::WebDAO::Base::_log)
 0.90
