add mk_attr, mk_sess_attr; new ver
git-svn-id: file:///home/zag/svn/WebDAO@584 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension WebDAO.
     
-    - use defined for methods in url
+1.03
+    - enhance traverse through object tree (__any_method hook)
+    - check if defined() method in url
+    - add mk_attr ,  mk_sess_attr for create accessors
+    - fix Container::_add_childs for support ref to array
 1.02
     - fix memleaks
     - clean deprecated code
