--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension WebDAO.
     
+1.05
+    - fix encode utf-8 data (only if set utf-8 flag)
 1.04
     - fix utf-8 in output stream due update FCGI module ( >0.68)
 1.03
