fix utf8; imporove wd_shell
git-svn-id: file:///home/zag/svn/WebDAO@757 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension WebDAO.
     
+1.06
+    - make wd_shell.pm possible for run query under shell
+    - fix  encode utf-8 data ( only is  is_utf8)
+
 1.05
     - fix encode utf-8 data (only if set utf-8 flag)
 1.04
