new traverse; pre, fetch, post objects;
git-svn-id: file:///home/zag/svn/WebDAO@852 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 Revision history for Perl extension WebDAO.
+
+2.0_1
+    - traverse method
+    - rename core mothods to form _METHOD_
+    - modal components
+    -  pre-, fetch- and post- fetch objects
+
     
 1.06
     - add set_* methods for output format's
