fix tag method; add wantformat()
git-svn-id: file:///home/zag/svn/WebDAO@913 d2c74b2b-9965-db11-a26f-001731543224

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension WebDAO.
 
+2.0_3
+    - add wantformat() method for deremine desired output context
+    - adopt <method> tag to new traverse scheme
+    
 2.0_2
     - fix // in path
 2.0_1
