--- a/contrib/Definitions.ru.pod
+++ b/contrib/Definitions.ru.pod
@@ -1,10 +1,7 @@
-=head1 NAME
+=begin pod
+=CHAPTER Язык определений
 
-Язык определений
-
-=over 
-
-=item object
+=defn object
 
 В качестве имени класса используется название perl модуля. Например:
 
@@ -22,7 +19,7 @@
 
     http:://example.com/page/Method1?param=1&param2=2
 
-=item regclass
+=defn regclass
 
 Имеется возможность определять псевдонимы (aka b<alias>) для используемых классов. Для этого предназначено определение I<regclass>. Пример:
 
@@ -45,7 +42,7 @@
   </body>
 
 
-=item include
+=defn include
 
 Данное определение используется для вставки содержимого внешнего файла в текущую позицию.
 
@@ -55,7 +52,7 @@
 
 F<$filename> - путь и имя  подключаемого файла. Текущим каталогом является I<DOCUMENT_ROOT>.
 
-=item method
+=defn method
 
 Производится обработка вызова с адресом указанным в атрибуте I<path> и текстом, указанным в содержимом тэга. Текст не обязателен и не рекомендуется к использованию. Пример кода страницы, в котором производится вывод простого меню.
 
@@ -120,5 +117,5 @@ F<$filename> - путь и имя  подключаемого файла. Тек
     </div>
   </body>
 
-=back
+=end pod
 
