--- a/README
+++ b/README
@@ -30,6 +30,9 @@ DEPENDENCIES
 This module requires  Perl 5.005 or greater and libraries:
 
 
+apt-get install libdatetime-format-http-perl
+
+
 AUTHOR
 
 Zahatski Aliaksandr
