remove mod_perl support; remove CGI.pm; add psgi adapter

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perl extension WebDAO.
 
-   - fix mod deps for wd_shell.pl
+2.0 25 Feb 2012
+  - remove mod_perl, CGI support
+  - add PSGI handler
+  - remove CGI.pm
+  - fix mod deps for wd_shell.pl
+
 2.0_14
    - convert pod to pod6
    - rewrite lexer (use XML::Flow instead XML::LibXML)
