--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension WebDAO.
 
+2.1.0 25 Feb 2012
+  - remove mod_perl2 support
+  - add httpcode table to Util
+
 2.0 25 Feb 2012
   - remove mod_perl, CGI support
   - add PSGI handler
