clean some deprecated code

--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 Revision history for Perl extension WebDAO.
 
-2.1.0 25 Feb 2012
+2.1 25 Feb 2012
   - remove mod_perl2 support
   - add httpcode table to Util
+  - create some depreacted code
 
 2.0 25 Feb 2012
   - remove mod_perl, CGI support
