fix parse body under non psgi env

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebDAO.
 
+2.2.2 2 Mar 2012
+  - fix parse body under FastCGI
+
 2.2.1 2 Mar 2012
   - CV::get_body, CV::body
 2.2.0 28 Feb 2012
