clean depreacted code

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebDAO.
 
+2.2.3 26 Mar 2012
+  - fix "Use of qw(...) as parentheses"
+ 
 2.2.2 2 Mar 2012
   - fix parse body under FastCGI
 
