wdEnginePar for wd_shell

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebDAO.
 
+2.06 
+  * add param wdEnginePar (wd_shell.pl)
+
 2.05 29 May 2012
   -  use params from command line (wd_shell.pl)
 
