--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebDAO.
 
+2.08 30 Jul 2012
+  * add "request" method to Component class
+
 2.07 13 Jul 2012
   * fix sessions cookie init
   * fix path_info_elments
