--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension WebDAO.
 
+2.09 06 Aug 2012
+  * fix issues on windows (https://rt.cpan.org/Ticket/Display.html?id=78783)
+
 2.08 30 Jul 2012
   * add "request" method to Component class
 
